--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Registration</title>
 </head>
 <body>
+  <div class="wrapper">
+    <div class="flex">
+      <img src="hospital.png" alt="Logo">
+      <h1>Registration</h1>
+    </div>
+    <div class="form-wrapper">
+      <form>
+        <div class="form-group">
+          <label for="name">Hospital Name</label>
+          <input type="text" id="name" name="name" class="form-control">
+          <small class="error"></small>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" class="form-control">
+          <small class="error"></small>
+        </div>
+        <div class="form-group">
+          <label for="address">Address</label>
+          <input type="text" id="address" name="address" class="form-control">
+          <small class="error"></small>
+        </div>
+        <div class="form-group">
+          <label for="password"></label>
+          <input type="password" id="password" name="password" class="form-control">
+          <small class="error"></small>
+        </div>
+        <div class="form-group">
+          <label for="confirm-password">Password</label>
+          <input type="password" id="confirm-password" name="confirm-password" class="form-control">
+          <small class="error"></small>
+        </div>
+
+        <div class="form-group">
+          <label for="terms">Confirm Password</label>
+          <input type="checkbox" id="terms" name="terms" class="form-control checkbox">
+          <small class="error"></small>
+        </div>
+
+        <input type="submit" value="Register" disabled>
+      </form>
+    </div>
+  </div>
   
 </body>
 </html>
