--- a/index.html
+++ b/index.html
@@ -5,51 +5,71 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registration</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="wrapper">
-    <div class="flex">
-      <img src="hospital.png" alt="Logo">
-      <h1>Registration</h1>
-    </div>
+      <h1  class="text-center">Registration</h1>
     <div class="form-wrapper">
       <form>
-        <div class="form-group">
-          <label for="name">Hospital Name</label>
-          <input type="text" id="name" name="name" class="form-control">
-          <small class="error"></small>
+        <div class="form-group position-relative">
+          <div class="flex input-wrapper">
+            <img class="icons" src="./assets/images/user.png" alt="user icon">
+            <input type="text" id="name" name="name" class="form-control" data-name="Hospital name" placeholder="Name">
+            <label for="name">Hospital Name</label>
+          </div>
+          <small id="name-error" class="error position-relative"></small>
         </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" class="form-control">
-          <small class="error"></small>
+        <div class="form-group position-relative">
+          <div class="flex">
+            <img class="icons" src="./assets/images/email.png" alt="user icon">
+
+            <input type="email" id="email" name="email" class="form-control"
+            data-name="Email" placeholder="Email">
+            <label for="email">Email</label>
+          </div>
+          <small id="email-error" class="error position-relative"></small>
         </div>
-        <div class="form-group">
-          <label for="address">Address</label>
-          <input type="text" id="address" name="address" class="form-control">
-          <small class="error"></small>
+        <div class="form-group position-relative">
+          <div class="flex">
+            <img class="icons" src="./assets/images/address.png" alt="user icon">
+            <input type="text" id="address" name="address" class="form-control"
+            data-name="Address" placeholder="Address">
+            <label for="address">Address</label>
+          </div>
+          <small id="address-error" class="error position-relative"></small>
         </div>
-        <div class="form-group">
-          <label for="password"></label>
-          <input type="password" id="password" name="password" class="form-control">
-          <small class="error"></small>
+        <div class="form-group position-relative">
+          <div class="flex">
+            <img class="icons" src="./assets/images/password.png" alt="user icon">
+            <input type="password" id="password" name="password" class="form-control"
+            data-name="Password" placeholder="Password">
+            <label for="password">Password</label>
+          </div>
+          <small id="password-error"  class="error position-relative"></small>
+
         </div>
-        <div class="form-group">
-          <label for="confirm-password">Password</label>
-          <input type="password" id="confirm-password" name="confirm-password" class="form-control">
-          <small class="error"></small>
+        <div class="form-group position-relative">
+          <div class="flex">
+            <img class="icons" src="./assets/images/password.png" alt="user icon">
+            <input type="password" id="confirm-password" name="confirm-password" class="form-control"
+            data-name="Confirm Password" placeholder="Confirm Password">
+            <label for="confirm-password">Confirm Password</label>
+          </div>
+          <small id="confirm-password-error"  class="error position-relative"></small>
+
         </div>
 
-        <div class="form-group">
-          <label for="terms">Confirm Password</label>
-          <input type="checkbox" id="terms" name="terms" class="form-control checkbox">
-          <small class="error"></small>
+        <div class="form-group position-relative flex justify-items-start align-items-center">
+          <input type="checkbox" id="terms" name="terms" class="form-control checkbox ">
+          <label for="terms">I agree to the <a href="#">Terms & conditions</a></label>
+          <small class="error position-relative"></small>
         </div>
 
-        <input type="submit" value="Register" disabled>
+        <input class="submit-form" type="submit" value="Register" >
       </form>
     </div>
   </div>
-  
+  <script src="index.js"></script>
 </body>
 </html>
