Add Toast Functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <p class="toast toast-message"></p>
   <div class="wrapper">
       <h1  class="text-center">Registration</h1>
     <div class="form-wrapper">
@@ -16,7 +17,7 @@
           <div class="flex input-wrapper">
             <img class="icons" src="./assets/images/user.png" alt="user icon">
             <input type="text" id="name" name="name" class="form-control" data-name="Hospital name" placeholder="Name">
-            <label for="name">Hospital Name</label>
+            <label class="input-label" for="name">Hospital Name</label>
           </div>
           <p id="name-error" class="error position-relative"></p>
         </div>
@@ -26,7 +27,7 @@
 
             <input type="email" id="email" name="email" class="form-control"
             data-name="Email" placeholder="Email">
-            <label for="email">Email</label>
+            <label class="input-label" for="email">Email</label>
           </div>
           <p id="email-error" class="error position-relative"></p>
         </div>
@@ -35,7 +36,7 @@
             <img class="icons" src="./assets/images/address.png" alt="user icon">
             <input type="text" id="address" name="address" class="form-control"
             data-name="Address" placeholder="Address">
-            <label for="address">Address</label>
+            <label class="input-label" for="address">Address</label>
           </div>
           <p id="address-error" class="error position-relative"></p>
         </div>
@@ -44,7 +45,7 @@
             <img class="icons" src="./assets/images/password.png" alt="user icon">
             <input type="password" id="password" name="password" class="form-control"
             data-name="Password" placeholder="Password">
-            <label for="password">Password</label>
+            <label class="input-label" for="password">Password</label>
           </div>
           <p id="password-error"  class="error position-relative"></p>
 
@@ -54,16 +55,20 @@
             <img class="icons" src="./assets/images/password.png" alt="user icon">
             <input type="password" id="confirm-password" name="confirm-password" class="form-control"
             data-name="Confirm Password" placeholder="Confirm Password">
-            <label for="confirm-password">Confirm Password</label>
+            <label class="input-label" for="confirm-password">Confirm Password</label>
           </div>
           <p id="confirm-password-error"  class="error position-relative"></p>
 
         </div>
 
-        <div class="form-group position-relative flex justify-items-start align-items-center">
-          <input type="checkbox" id="terms" name="terms" class="form-control checkbox ">
-          <label for="terms">I agree to the <a href="#">Terms & conditions</a></label>
-          <p class="error position-relative"></p>
+        <div class="form-group position-relative"></div>
+          <div class="position-relative flex justify-items-start align-items-center pl-45">
+            <input type="checkbox" id="terms" name="terms" class="form-control checkbox">
+            <label for="terms">I agree to the <a href="#">Terms & conditions</a></label>
+            <p class="error position-relative"></p>
+          </div>
+          <p id="terms-error" class="error position-relative"></p>
+
         </div>
 
         <input class="submit-form" type="submit" value="Register" >
