Toggle Submit Form Button Disable

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         </div>
 
-        <input class="submit-form" type="submit" value="Register" >
+        <input class="submit-form" type="submit" value="Register" disabled>
       </form>
     </div>
   </div>
